styled autopickteamlist and fixed scrollbar bug

--- a/src/analysis/public/css/style.css
+++ b/src/analysis/public/css/style.css
@@ -114,11 +114,6 @@ body {
   position: relative;
 }
 
-#pick-list-search-container{
-  border:none;
-  margin-bottom:5px;
-}
-
 #search-container {
   padding: 20px 0;
   border-top: 1px solid var(--accent-alt);
@@ -303,7 +298,6 @@ body {
   color: var(--accent-alt);
   margin-top:32px;
   margin-bottom:10px;
-  
 }
 
 #team-list-container{
@@ -316,7 +310,11 @@ body {
 }
 
 #auto-pick-team-list{
+  display: flex;
+  flex-direction:column;
   overflow:auto;
+  margin-bottom:15px;
+  gap: 10px;
 }
 
 #alliance-vs {
